--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a-asset-item id="Logo" src="https://raw.githubusercontent.com/WitchLord/3M_ARProduct/master/Models/scene.gltf"></a-asset-item>
     </a-assets>
   
-    !-- <a-marker preset="kanji">
+    -- <a-marker preset="kanji">
     <a-marker type="pattern" url="https://raw.githubusercontent.com/WitchLord/42labs.github.io/master/Models/pattern-marker.patt">
       <a-entity gltf-model="#Logo" 
                 scale="0.1 0.1 0.1"
