--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <a-asset-item id="Logo" src="https://raw.githubusercontent.com/WitchLord/WebAR_Logo/master/Models/scene.gltf"></a-asset-item>
     </a-assets>
   
-
-    <a-marker type="pattern" url="https://raw.githubusercontent.com/WitchLord/42labs.github.io/master/Models/pattern-marker.patt">
+    <a-marker preset="kanji">
       <a-entity gltf-model="#Logo"
                 position="-0.5 0.5 0.5" 
                 scale="0.03 0.03 0.03" 
