--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 animation-mixer="clip: Take 001;"
                 crossorigin="anonymous"></a-entity>  
      
-     <a-entity gltf-model="#PR"
+     <a-entity gltf-model="#PR2"
                 position="0.0 0.0 2"
                 rotation= "-90 0 0"
                 scale="0.02 0.02 0.02" 
