--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    </a-marker>
    
    <a-marker type="pattern" url="https://raw.githubusercontent.com/WitchLord/42labs.github.io/master/42Labs.patt">
-      <a-entity gltf-model="#CCM"
+      <a-entity gltf-model="#CCMI"
                 position="0.0 1.0 0.0"
                 rotation= "90 0 0"
                 scale="0.02 0.02 0.02" 
@@ -42,6 +42,12 @@
                 rotation= "-90 0 0"
                 scale="0.02 0.02 0.02" 
                 ></a-entity>
+     
+     <a-entity gltf-model="#Logo"
+                position="-0.5 0.5 0.5" 
+                scale="0.03 0.03 0.03" 
+                animation-mixer="clip: Take 001;"
+                crossorigin="anonymous"></a-entity>
     
    </a-marker>
    
