--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <a-marker preset="kanji">
       <a-entity gltf-model="#Logo"
                 position="-0.5 0.5 0.5" 
-                scale="0.03 0.03 0.03" 
+                scale="0.03 0.03 0.03"
+                rotation="0 90 0"
                 animation-mixer="clip: Take 001;"
                 crossorigin="anonymous"></a-entity>  
     
