--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <a-scene arjs="debugUIEnabled: false;">
 
      <a-assets>
-      <a-asset-item id="Logo" src="https://raw.githubusercontent.com/WitchLord/42labs.github.io/master/Models/scene.gltf"></a-asset-item>
+      <a-asset-item id="Logo" src="https://raw.githubusercontent.com/WitchLord/WebAR_Logo/master/Models/scene.gltf"></a-asset-item>
     </a-assets>
      
      <a-marker type="pattern" url="https://raw.githubusercontent.com/42LabsCS/InviteRA.github.io/main/pattern-42Labs_Cube.patt">
